@@ -1,6 +1,7 @@
 0.03  26-01-2011
     - Make it into a more complete and robust distribution
     - More documentation
+    - Support connect ({ verbose => 1 });
 
 0.02  24-01-2011
     - Ongoing work-in-progress in converting all GSMD::Gnokii
